--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,10 @@
 include themes/gruvbox.conf
 
-font_family      SF Mono
+font_family      Iosevka Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size        12.0
+font_size        14.0
 
 window_padding_width 12
 hide_window_decorations yes
